--- a/mod3_sol/index.html
+++ b/mod3_sol/index.html
@@ -18,7 +18,7 @@
         <div class="container">
           <div class="navbar-header">
             <div class="navbar-brand" id="brand-name">
-              <a href="mod3_sol.html">Food, LLC</a>
+              <a href="index.html">Food, LLC</a>
             </div> <!-- END OF .navbar-brand -->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
