--- a/mod3_sol/index.html
+++ b/mod3_sol/index.html
@@ -28,7 +28,7 @@
             </button>
           </div> <!-- END OF .navbar-header -->
           <div id="collapsable-nav" class="collapse navbar-collapse">
-            <ul id="nav-list" class="nav navbar-nav navbar-right text-center">
+            <ul id="nav-list" class="nav navbar-nav navbar-right text-center hidden-lg hidden-md hidden-sm">
               <li>
                 <a href="#Chicken">
                   Chicken
